controllers are upgraded to lambda and stream response structures.